# yt-dlp-kit

./: .gitignore  .skill-examples.json  AGENTS.md  PLAN-MCP.md  SKILL.md  bilibili_cookies.txt  bilibili_tools.py  collect_shamio_mh.py  collect_shamio_mh_v2.py  demo_bili_jinhui.py  demo_shamio_mh.py  get_bili_cookie.py  live_monitor.py  mcp_server.py  pyproject.toml  search_bili_user.py  yt-dlp-kit.skill
core/: __init__.py  downloader.py
features/: __init__.py  archive_sync.py  chapter_split.py  live_monitor.py  live_recorder.py  subtitle_grabber.py  thumbnail_batch.py  video_processor.py
references/: mcp-tools.md  platform-notes.md  workflows.md
